@@ -34,6 +34,7 @@ NEWS
   * Add option to ignore the "Expect: 100-continue" header instead of returning 417 Expectation failed (closes #1017)
   * Use modified etags in mod_compress (fixes #1800)
   * Fix max-connection limit handling/100% cpu usage (fixes #1436)
+  * Fix error handling in freebsd-sendfile (fixes #1813)
 
 - 1.4.20 - 2008-09-30
 
